--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    margin: 0;
+}
+
+.full-contaier {
+    width: 100%;
+}
+.container{
+    width: 90%;
+    margin:auto;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+#left-menu {
+    width: 20%;
+    min-width: 200px;
+    height: 100vh;
+    background-color: #ffffff;
+    // box-shadow: 5px 0px 5px #ccc;
+    box-shadow: 20px 0px 10px #f9fafdff;
+    z-index: 1;
+}
+
+#main {
+    width: 80%;
+    background-color: #fcfdffff;
+}
