--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,39 @@
-<p>menu works!</p>
+<nav class="nav-bar vertical-nav">
+    <h4>
+        <span>logo</span> Klamma
+    </h4>
+    <ul class="nav-list">
+        <li class="nav-item">
+            <span>acceuil</span> Overview
+        </li>
+        <li class="nav-item">
+            <span>wallet</span> Cards
+        </li>
+        <li class="nav-item">
+            <span>payement</span> Payements
+            <ul class="submenu nav-list">
+                <li class="nav-sub-item">option 1</li>
+                <li class="nav-sub-item">option 2</li>
+            </ul>
+        </li>
+        <li class="nav-item">
+            <span>log</span> Reports
+            <ul class="submenu nav-list">
+                <li class="nav-sub-item">option 1</li>
+                <li class="nav-sub-item">option 2</li>
+            </ul>
+        </li>
+        <li class="nav-item nav-list">
+            <span>contact</span> Contacts
+        </li>
+    </ul>
+
+    <ul class="nav-list mr-auto">
+        <li class="nav-item">
+            <span>setting</span> Settings
+        </li>
+        <li class="nav-item">
+            <span>avatar</span> Account
+        </li>
+    </ul>
+</nav>
