--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="full-container">
+<div class="container-fluid">
   <div class="row">
-    <div id="left-menu" class="col">
+    <div id="left-menu" class="col-md-3">
       <div class="container">
         <app-menu></app-menu>
       </div>
     </div>
-    <div id="main" class="col">
+    <div id="main" class="col-md-9">
       <div class="container">
         <router-outlet></router-outlet>
       </div>
