--- a/src/app/limit/limit.component.html
+++ b/src/app/limit/limit.component.html
@@ -1,1 +1,6 @@
-<p>limit works!</p>
+<h5>Credit limit</h5>
+<strong>{{ creditLimit.value }}</strong> / {{ creditLimit.limit}} {{ creditLimit.currency | uppercase }}
+
+<h5>Online limit</h5>
+<strong>{{ onlineLimit.value }}</strong> / {{ onlineLimit.limit}} {{ onlineLimit.currency | uppercase }}
+
