--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -4,11 +4,15 @@
     </div>
 </div>
 <div class="row">
-    <div class="col" >
-        <app-limit></app-limit>
-        <app-payement></app-payement>
+    <div class="col-md-6" >
+        <div style="border-bottom: solid black 1px;">
+            <app-limit></app-limit>
+        </div>
+        <div>
+            <app-payement></app-payement>
+        </div>
     </div>
-    <div class="col" id="list-activites">
+    <div class="col-md-6" id="list-activites" style="border-left: solid black 1px">
         <app-list-activities></app-list-activities>
     </div>
 </div>
