--- a/src/assets/scss/_icon.scss
+++ b/src/assets/scss/_icon.scss
@@ -1,40 +1,225 @@
 @font-face {
-    font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?ju49lz');
-    src:  url('../fonts/icomoon.eot?ju49lz#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?ju49lz') format('truetype'),
-      url('../fonts/icomoon.woff?ju49lz') format('woff'),
-      url('../fonts/icomoon.svg?ju49lz#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-black:before {
-    content: "\e902";
-  }
-  .icon-logo-blue:before {
-    content: "\e900";
-    color: #2f3677;
-  }
-  .icon-home:before {
-    content: "\e901";
-  }
-  .icon-cog:before {
-    content: "\e994";
-  }
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?3kbfc9');
+  src:  url('../fonts/icomoon.eot?3kbfc9#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?3kbfc9') format('truetype'),
+    url('../fonts/icomoon.woff?3kbfc9') format('woff'),
+    url('../fonts/icomoon.svg?3kbfc9#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding-right: .5em;
+}
+
+.icon-arrow-down-left:before {
+  content: "\e921";
+}
+.icon-arrow-down-right:before {
+  content: "\e922";
+}
+.icon-bell:before {
+  content: "\e923";
+}
+.icon-chevron-down:before {
+  content: "\e924";
+}
+.icon-chevron-left:before {
+  content: "\e925";
+}
+.icon-chevron-right:before {
+  content: "\e926";
+}
+.icon-chevron-up:before {
+  content: "\e927";
+}
+.icon-menu:before {
+  content: "\e928";
+}
+.icon-plus:before {
+  content: "\e92d";
+}
+.icon-send:before {
+  content: "\e929";
+}
+.icon-settings:before {
+  content: "\e92e";
+}
+.icon-compass:before {
+  content: "\e900";
+}
+.icon-message .path1:before {
+  content: "\e901";
+  color: rgb(0, 0, 0);
+}
+.icon-message .path2:before {
+  content: "\e902";
+  margin-left: -1.1015625em;
+  color: rgb(0, 0, 0);
+}
+.icon-message .path3:before {
+  content: "\e903";
+  margin-left: -1.1015625em;
+  color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-master-card-nb .path1:before {
+  content: "\e920";
+  color: rgb(154, 154, 154);
+}
+.icon-master-card-nb .path2:before {
+  content: "\e92b";
+  margin-left: -1.6787109375em;
+  color: rgb(68, 64, 64);
+}
+.icon-master-card-nb .path3:before {
+  content: "\e92c";
+  margin-left: -1.6787109375em;
+  color: rgb(145, 145, 145);
+  opacity: 0.8235;
+}
+.icon-logo-visa .path1:before {
+  content: "\e91e";
+  color: rgb(255, 255, 255);
+}
+.icon-logo-visa .path2:before {
+  content: "\e91f";
+  margin-left: -1.8125em;
+  color: rgb(0, 0, 0);
+}
+.icon-plus-rect .path1:before {
+  content: "\e904";
+  color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-plus-rect .path2:before {
+  content: "\e905";
+  margin-left: -1.3134765625em;
+  color: rgb(0, 0, 0);
+}
+.icon-plus-rect .path3:before {
+  content: "\e906";
+  margin-left: -1.3134765625em;
+  color: rgb(0, 0, 0);
+}
+.icon-conversion .path1:before {
+  content: "\e907";
+  color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-conversion .path2:before {
+  content: "\e908";
+  margin-left: -0.9921875em;
+  color: rgb(0, 0, 0);
+}
+.icon-conversion .path3:before {
+  content: "\e909";
+  margin-left: -0.9921875em;
+  color: rgb(0, 0, 0);
+}
+.icon-conversion .path4:before {
+  content: "\e90a";
+  margin-left: -0.9921875em;
+  color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-conversion .path5:before {
+  content: "\e90b";
+  margin-left: -0.9921875em;
+  color: rgb(0, 0, 0);
+}
+.icon-conversion .path6:before {
+  content: "\e90c";
+  margin-left: -0.9921875em;
+  color: rgb(0, 0, 0);
+}
+.icon-lock:before {
+  content: "\e90d";
+}
+.icon-avatar .path1:before {
+  content: "\e90e";
+  color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-avatar .path2:before {
+  content: "\e90f";
+  margin-left: -0.791015625em;
+  color: rgb(0, 0, 0);
+}
+.icon-window .path1:before {
+  content: "\e910";
+  color: rgb(3, 3, 3);
+  opacity: 0.98;
+}
+.icon-window .path2:before {
+  content: "\e911";
+  margin-left: -1.35546875em;
+  color: rgb(3, 3, 3);
+}
+.icon-window .path3:before {
+  content: "\e912";
+  margin-left: -1.35546875em;
+  color: rgb(3, 3, 3);
+}
+.icon-contact:before {
+  content: "\e913";
+}
+.icon-reports:before {
+  content: "\e914";
+}
+.icon-payement:before {
+  content: "\e915";
+}
+.icon-wallet:before {
+  content: "\e916";
+}
+.icon-home:before {
+  content: "\e917";
+}
+.icon-master-card .path1:before {
+  content: "\e918";
+  color: rgb(255, 164, 35);
+}
+.icon-master-card .path2:before {
+  content: "\e919";
+  margin-left: -1.6787109375em;
+  color: rgb(255, 28, 35);
+  opacity: 0.9321;
+}
+.icon-master-card .path3:before {
+  content: "\e91a";
+  margin-left: -1.6787109375em;
+  color: rgb(255, 164, 35);
+  opacity: 0.8235;
+}
+.icon-logo-black:before {
+  content: "\e91c";
+}
+.icon-logo-white:before {
+  content: "\e91d";
+  color: #fff;
+}
+.icon-logo-blue:before {
+  content: "\e91b";
+  color: #2f3677;
+}
+.icon-pencil:before {
+  content: "\e92a";
+}
+.icon-cog:before {
+  content: "\e994";
+}
