--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div id="left-menu" class="col-md-3">
-      <div class="container">
+    <div id="left-menu" class="col-md-2">
+      <div class="">
         <app-menu></app-menu>
       </div>
     </div>
-    <div id="main" class="col-md-9">
-      <div class="container">
+    <div id="main" class="col-md-10">
+      <div class="">
         <router-outlet></router-outlet>
       </div>
     </div>
