--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,20 +7,20 @@
             <a routerLinkActive="active" routerLink="/card" class="navlink"><span class="icon-home"></span> Overview</a>
         </li>
         <li class="nav-item">
-            <a routerLinkActive="active" routerLink="/" class="navlink"><span class="icon-black"></span> Cards</a>
+            <a routerLinkActive="active" routerLink="/" class="navlink"><span class="icon-wallet"></span> Cards</a>
         </li>
         <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#sub_menu_payement" role="button" aria-expanded="false" aria-controls="collapseExample">
             <a href="#" class="navlink"><span class="icon-payement"></span> Payements</a>
             <ul class="submenu nav-list collapse" id="sub_menu_payement">
-                <li class="nav-sub-item">option 1</li>
-                <li class="nav-sub-item">option 2</li>
+                <li class="nav-sub-item"><span class="icon-pencil">Option 1</span></li>
+                <li class="nav-sub-item"><span class="icon-pencil">Option 2</span></li>
             </ul>
         </li>
         <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#sub_menu_report" role="button" aria-expanded="false" aria-controls="collapseExample">
             <a href="#" class="navlink"><span class="icon-reports"></span> Reports</a>
             <ul class="submenu nav-list collapse" id="sub_menu_report">
-                <li class="nav-sub-item">option 1</li>
-                <li class="nav-sub-item">option 2</li>
+                <li class="nav-sub-item"><span class="icon-pencil">Option 1</span></li>
+                <li class="nav-sub-item"><span class="icon-pencil">Option 2</span></li>
             </ul>
         </li>
         <li class="nav-item nav-list">
@@ -33,7 +33,7 @@
             <a href="#" class="navlink"><span class="icon-cog"></span> Settings</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="navlink"><span class="icon-user"></span> Account</a>
+            <a href="#" class="navlink"><span class="icon-avatar"></span> Account</a>
         </li>
     </ul>
 </nav>
