--- a/src/app/list-card/list-card.component.html
+++ b/src/app/list-card/list-card.component.html
@@ -1,4 +1,4 @@
-<div>Your Cards <button>New card<span class="icon-add"></span></button></div>
+<div class="title-header"><span class="title-text">Your Cards</span><button class="button">New card <span class="icon-plus"></span><span class="icon-add no-padding"></span></button></div>
 <div class="list-card">
     <app-card *ngFor="let card of cards" [card]="card"></app-card>
 </div>
