--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div id="left-menu" class="col-md-2">
-      <div class="">
+    <div id="left-menu" class="col-md-2 pt-4">
         <app-menu></app-menu>
-      </div>
     </div>
-    <div id="main" class="col-md-10">
+    <div id="main" class="col-md-10 pt-5 px-5">
       <div class="">
         <router-outlet></router-outlet>
       </div>
