--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,8 +1,37 @@
 .card-perso {
-    width: 250px;
-    height: 150px;
+    width: 280px;
+    height: 170px;
     border-radius: .5em;
     box-shadow: 0px 0px 10px #ececec;
     background-color: white;
-    margin: 10px;
+    margin: 1em;
+    margin-left: 0;
+    padding: 1em;
+    color: #2f3677;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // background-color: #222;
+
+    .general-info {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+
+        .card-info {
+            font-size: .9em;
+            color:rgb(191, 191, 191) !important;
+            font-weight: 500;
+        }
+    }
+}
+
+.card-master-card {
+    background-image: url('../../assets/svg/master-card.svg');
+    background-size:cover;
+}
+
+.dark {
+    color: white !important;
 }
