--- a/src/app/list-activities/list-activities.component.html
+++ b/src/app/list-activities/list-activities.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex space-between">
+<div class="d-flex justify-content-between">
     <h4>Recent Activities</h4>
-    <button type="button">View a report</button>
+    <button type="button" class="button">View a report</button>
 </div>
 <app-activitie *ngFor="let activitie of activities" [activitie]="activitie"></app-activitie>
