--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -33,7 +33,7 @@
             <a href="#" class="navlink"><span class="icon-cog"></span> Settings</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="navlink"><span class="icon-avatar"></span> Account</a>
+            <a href="#" class="navlink"><span class="icon-avatar"><span class="path1"></span><span class="path2"></span></span> Account</a>
         </li>
     </ul>
 </nav>
