--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -4,15 +4,15 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6" >
-        <div style="border-bottom: solid black 1px;">
+    <div class="col-md-7" >
+        <div style="border-bottom: solid rgb(169, 169, 169) 1px;">
             <app-limit></app-limit>
         </div>
         <div>
             <app-payement></app-payement>
         </div>
     </div>
-    <div class="col-md-6" id="list-activites" style="border-left: solid black 1px">
+    <div class="col-md-5" id="list-activites" style="border-left: solid rgb(169, 169, 169) 1px">
         <app-list-activities></app-list-activities>
     </div>
 </div>
