--- a/src/assets/scss/_icon.scss
+++ b/src/assets/scss/_icon.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?3kbfc9');
-  src:  url('../fonts/icomoon.eot?3kbfc9#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?3kbfc9') format('truetype'),
-    url('../fonts/icomoon.woff?3kbfc9') format('woff'),
-    url('../fonts/icomoon.svg?3kbfc9#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?trrjkp');
+  src:  url('../fonts/icomoon.eot?trrjkp#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?trrjkp') format('truetype'),
+    url('../fonts/icomoon.woff?trrjkp') format('woff'),
+    url('../fonts/icomoon.svg?trrjkp#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -19,11 +19,20 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  
+  /* Enable Ligatures ================ */
+  letter-spacing: 0;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  font-feature-settings: "liga";
+  -webkit-font-variant-ligatures: discretionary-ligatures;
+  font-variant-ligatures: discretionary-ligatures;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-right: .5em;
 }
 
 .icon-arrow-down-left:before {
@@ -59,6 +68,10 @@
 .icon-settings:before {
   content: "\e92e";
 }
+.icon-logo-visa:before {
+  content: "\e91e";
+  color:rgb(0, 0, 0);
+}
 .icon-compass:before {
   content: "\e900";
 }
@@ -92,14 +105,31 @@
   color: rgb(145, 145, 145);
   opacity: 0.8235;
 }
-.icon-logo-visa .path1:before {
-  content: "\e91e";
-  color: rgb(255, 255, 255);
-}
-.icon-logo-visa .path2:before {
-  content: "\e91f";
-  margin-left: -1.8125em;
+.icon-avatar .path1:before {
+  content: "\e90e";
   color: rgb(0, 0, 0);
+  opacity: 0.98;
+}
+.icon-avatar .path2:before {
+  content: "\e90f";
+  margin-left: -0.791015625em;
+  color: rgb(0, 0, 0);
+}
+.icon-master-card .path1:before {
+  content: "\e918";
+  color: rgb(255, 164, 35);
+}
+.icon-master-card .path2:before {
+  content: "\e919";
+  margin-left: -1.6787109375em;
+  color: rgb(255, 28, 35);
+  opacity: 0.9321;
+}
+.icon-master-card .path3:before {
+  content: "\e91a";
+  margin-left: -1.6787109375em;
+  color: rgb(255, 164, 35);
+  opacity: 0.8235;
 }
 .icon-plus-rect .path1:before {
   content: "\e904";
@@ -150,16 +180,6 @@
 .icon-lock:before {
   content: "\e90d";
 }
-.icon-avatar .path1:before {
-  content: "\e90e";
-  color: rgb(0, 0, 0);
-  opacity: 0.98;
-}
-.icon-avatar .path2:before {
-  content: "\e90f";
-  margin-left: -0.791015625em;
-  color: rgb(0, 0, 0);
-}
 .icon-window .path1:before {
   content: "\e910";
   color: rgb(3, 3, 3);
@@ -190,24 +210,9 @@
 .icon-home:before {
   content: "\e917";
 }
-.icon-master-card .path1:before {
-  content: "\e918";
-  color: rgb(255, 164, 35);
-}
-.icon-master-card .path2:before {
-  content: "\e919";
-  margin-left: -1.6787109375em;
-  color: rgb(255, 28, 35);
-  opacity: 0.9321;
-}
-.icon-master-card .path3:before {
-  content: "\e91a";
-  margin-left: -1.6787109375em;
-  color: rgb(255, 164, 35);
-  opacity: 0.8235;
-}
 .icon-logo-black:before {
   content: "\e91c";
+  color:rgb(0, 0, 0);
 }
 .icon-logo-white:before {
   content: "\e91d";
