--- a/src/app/payement/payement.component.html
+++ b/src/app/payement/payement.component.html
@@ -1,35 +1,37 @@
-<h4>Int. Payement</h4>
-<div class="row">
-    <div class="col ">
-        <span><strong>{{ data.awaiting }}</strong></span>
+<h5>Int. Payement</h5>
+<div class="row pb-4">
+    <div class="col badge-perso">
+        <span style="font-size: 1.5em;"><strong>{{ data.awaiting }}</strong></span>
         <span>Awaiting</span>
     </div>
-    <div class="col">
-        <span><strong>{{ data.in_progress }}</strong></span>
+    <div class="col badge-perso">
+        <span style="font-size: 1.5em;"><strong>{{ data.in_progress }}</strong></span>
         <span>In Progress</span>
     </div>
-    <div class="col">
-        <span><strong>{{ data.completed }}</strong></span>
+    <div class="col badge-perso">
+        <span style="font-size: 1.5em;"><strong>{{ data.completed }}</strong></span>
         <span>Completed</span>
     </div>
-    <div class="col">
-        <span><strong>{{ data.canceled }}</strong></span>
+    <div class="col badge-perso">
+        <span style="font-size: 1.5em"><strong>{{ data.canceled }}</strong></span>
         <span>Canceled</span>
     </div>
 </div>
 
-<div class="resume-transaction">
-     <div><span class="icon-arrow-left-down">Money In</span></div>
-     <div>
-         <div class="money">10 425</div>
-         <div class="currency">USD</div>
-     </div>
-</div>
-
-<div class="resume-transaction">
-    <div><span class="icon-arrow-right-up">Money Out</span></div>
-    <div>
-        <div class="money">4 640</div>
-        <div class="currency">USD</div>
+<div class="row">
+    <div class="col resume-transaction card-template">
+        <div style="color: #198754"><span class="icon-arrow-down-left"></span>Money In</div>
+        <div class="d-flex justify-content-between pt-4">
+            <div class="money"><strong>{{ 10435 | number }}</strong></div>
+            <div class="currency">USD</div>
+        </div>
     </div>
+
+    <div class="col resume-transaction card-template">
+        <div style="color: #dc3545"><span class="icon-arrow-up-right"></span>Money Out</div>
+        <div class="d-flex justify-content-between pt-4">
+            <div class="money"><strong>{{ 4640 | number }}</strong></div>
+            <div class="currency">USD</div>
+        </div>
+    </div>  
 </div>
