--- a/src/app/activitie/activitie.component.html
+++ b/src/app/activitie/activitie.component.html
@@ -1,23 +1,32 @@
 <div>{{ activitie.title }}</div>
-<div class="list-item" *ngFor="let trans of activitie.transaction">
-    <ng-container *ngIf="trans.type == 'debit' || trans.type == 'payement'">
-        <div>
-            <div>To {{ trans.destinataire }}</div>
-            <div>{{ trans.status }}</div>
+<div class="list" *ngFor="let trans of activitie.transaction">
+    <div class="list-item">
+        <div class="icon">
+            <span *ngIf="trans.type == 'debit'" class="icon-send"></span>
+            <span *ngIf="trans.type == 'payement'" class="icon-window"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span>
+            <span *ngIf="trans.type == 'deposit'" class="icon-plus-rect"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span>
+            <span *ngIf="trans.type == 'conversion'" class="icon-conversion"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span></span>
         </div>
-    </ng-container>
-    <ng-container *ngIf="trans.type == 'conversion'">
-        <div>
-            <div>{{ trans.origin | uppercase }} to {{ trans.destination | uppercase }}</div>
-            <div>{{ trans.status }}</div>
-        </div>
-    </ng-container>
-    <ng-container *ngIf="trans.type == 'deposit'">
-        <div>
-            <div>Deposit to your {{ trans.currency | uppercase }} balance</div>
-            <div>{{ trans.status }}</div>
-        </div>
-    </ng-container>
+        <ng-container *ngIf="trans.type == 'debit' || trans.type == 'payement'">
+            <div class="item">
+                <div>To {{ trans.destinataire }}</div>
+                <div style="color: #c1bcbc">{{ trans.status | titlecase }}</div>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="trans.type == 'conversion'">
+            <div>
+                <div>{{ trans.origin | uppercase }} to {{ trans.destination | uppercase }}</div>
+                <div style="color: #c1bcbc">{{ trans.status | titlecase }}</div>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="trans.type == 'deposit'">
+            <div>
+                <div>Deposit to your {{ trans.currency | uppercase }} balance</div>
+                <div style="color: #c1bcbc">{{ trans.status | titlecase }}</div>
+            </div>
+        </ng-container>
 
-        <div>{{ trans.value | number }}</div>
+        <div style="margin-left: auto;">{{ trans.value | number }} <strong>{{ trans.currency | uppercase }}</strong></div>
+    </div>
+
 </div>
