--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -2,12 +2,12 @@
     width: 280px;
     height: 170px;
     border-radius: .5em;
-    box-shadow: 0px 0px 10px #ececec;
+    box-shadow: 5px 5px 10px #ececec;
     background-color: white;
     margin: 1em;
     margin-left: 0;
     padding: 1em;
-    color: #2f3677;
+    color: #53556d;
 
     display: flex;
     flex-direction: column;
