--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -4,15 +4,15 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-7" >
-        <div style="border-bottom: solid rgb(169, 169, 169) 1px;">
+    <div class="col-md-7 pe-md-5" >
+        <div style="border-bottom: solid #c1bcbc 1px;" class="pb-4" >
             <app-limit></app-limit>
         </div>
-        <div>
+        <div class="pt-4">
             <app-payement></app-payement>
         </div>
     </div>
-    <div class="col-md-5" id="list-activites" style="border-left: solid rgb(169, 169, 169) 1px">
+    <div class="col-md-5 px-5" id="list-activites" style="border-left: solid #c1bcbc 1px">
         <app-list-activities></app-list-activities>
     </div>
 </div>
