--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 body {
     margin: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: #2f3677;
+    color: #53556d !important;
 }
 
 * {
@@ -17,12 +17,13 @@ body {
 .button {
     font-size: 0.8em;
     border-radius: .5em;
-    padding: .5em;
+    padding: .5em 1em;
     border:none;
 }
 
-h4, h5 {
+h3, h4, h5 {
     font-weight: bold !important;
+    color: rgb(43, 43, 43)
 }
 
 .full-contaier {
@@ -51,5 +52,32 @@ h4, h5 {
 #main {
     // width: auto;
     margin-left: auto;
-    background-color: #f7faff;
+    background-color: #fbfcff;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    .list-item {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        .icon {
+            margin-right: 2em;
+        }
+        padding: .5em 0;
+    }
+}
+
+.card-template {
+    border-radius: .5em;
+    box-shadow: 0px  0px 15px #d8d8d8;
+    padding: 1em;
+    margin-right: 1.2em;
+    width: fit-content;
+}
+
+.card-template:last-child {
+    margin-right: 0px;
 }
