--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,36 +4,36 @@
             <a routerLink="/" class="navbrand"><span class="icon-logo-blue"></span> Klamma</a>
         </li>
         <li class="nav-item">
-            <a routerLinkActive="active" routerLink="/card" class="navlink"><span class="icon-home"></span> Overview</a>
+            <a routerLinkActive="active" routerLink="/" class="navlink"><span class="icon-home"></span> Overview</a>
         </li>
         <li class="nav-item">
-            <a routerLinkActive="active" routerLink="/" class="navlink"><span class="icon-wallet"></span> Cards</a>
+            <a routerLinkActive="active" routerLink="/card" class="navlink"><span class="icon-wallet"></span> Cards</a>
         </li>
         <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#sub_menu_payement" role="button" aria-expanded="false" aria-controls="collapseExample">
-            <a href="#" class="navlink"><span class="icon-payement"></span> Payements</a>
+            <a routerLinkActive="active" routerLink="/payement" class="navlink"><span class="icon-payement"></span> Payements</a>
             <ul class="submenu nav-list collapse" id="sub_menu_payement">
                 <li class="nav-sub-item"><span class="icon-pencil">Option 1</span></li>
                 <li class="nav-sub-item"><span class="icon-pencil">Option 2</span></li>
             </ul>
         </li>
         <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#sub_menu_report" role="button" aria-expanded="false" aria-controls="collapseExample">
-            <a href="#" class="navlink"><span class="icon-reports"></span> Reports</a>
+            <a routerLinkActive="active" routerLink="/report" class="navlink"><span class="icon-reports"></span> Reports</a>
             <ul class="submenu nav-list collapse" id="sub_menu_report">
                 <li class="nav-sub-item"><span class="icon-pencil">Option 1</span></li>
                 <li class="nav-sub-item"><span class="icon-pencil">Option 2</span></li>
             </ul>
         </li>
         <li class="nav-item nav-list">
-            <a href="#" class="navlink"><span class="icon-contact"></span> Contacts</a>
+            <a routerLinkActive="active" routerLink="/contact" class="navlink"><span class="icon-contact"></span> Contacts</a>
         </li>
     </ul>
 
     <ul class="nav-list">
         <li class="nav-item">
-            <a href="#" class="navlink"><span class="icon-cog"></span> Settings</a>
+            <a routerLinkActive="active" routerLink="/setting" class="navlink"><span class="icon-cog"></span> Settings</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="navlink"><span class="icon-avatar"><span class="path1"></span><span class="path2"></span></span> Account</a>
+            <a routerLinkActive="active" routerLink="/account" class="navlink"><span class="icon-avatar"><span class="path1"></span><span class="path2"></span></span> Account</a>
         </li>
     </ul>
 </nav>
