--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -14,6 +14,12 @@
     justify-content: space-between;
     // background-color: #222;
 
+    .card-header-perso {
+        display:flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
     .general-info {
         display: flex;
         justify-content: space-between;
